# fingermouse

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  typos.local.toml  typos.toml
.github/workflows/: ci.yml  coverage-main.yml  release.yml
docs/: complexity-antipatterns-and-refactoring-strategies.md  reliable-testing-in-rust-via-dependency-injection.md
src/: config.rs  framing.rs  identity.rs  main.rs  query.rs  rate_limit.rs  server.rs  storage.rs  telemetry.rs  user.rs
tests/: e2e.rs
tests/e2e/: common.rs  direct.rs  mod.rs  proxy.rs
