[package]
name = "fingermouse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.6", features = ["derive", "env"] }
futures = "0.3.30"
indexmap = { version = "2.3.0", features = ["serde"] }
mockable = { version = "0.1.4", default-features = false, features = ["clock", "mock"] }
object_store = { version = "0.9.1", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
dashmap = "5.5.3"
metrics = "0.22.4"
metrics-exporter-prometheus = "0.13.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.0"
rstest = "0.21.0"
tempfile = "3.10.1"
third-wheel = "0.2.0"
portpicker = "0.1.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
missing_docs                        = "deny"
missing_crate_level_docs            = "deny"
